--- a/PswManager.UI.WPF/MainWindow.xaml
+++ b/PswManager.UI.WPF/MainWindow.xaml
@@ -4,9 +4,161 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PswManager.UI.WPF"
+        xmlns:views="clr-namespace:PswManager.UI.WPF.Views"
+        xmlns:vms="clr-namespace:PswManager.UI.WPF.ViewModels"             
+        xmlns:viewmodels="clr-namespace:PswManager.UI.WPF.ViewModels" 
+        d:DataContext="{d:DesignInstance Type=viewmodels:MainViewModel}"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="MainWindow" 
+        MaxHeight="{x:Static SystemParameters.MaximizedPrimaryScreenHeight}"
+        MaxWidth="{x:Static SystemParameters.MaximizedPrimaryScreenWidth}"
+        Height="450" 
+        Width="800"
+        MinHeight="300"
+        MinWidth="300"
+        WindowStyle="None"
+        WindowStartupLocation="CenterScreen"
+        >
+
+    <WindowChrome.WindowChrome>
+        <WindowChrome 
+            CaptionHeight="30" 
+            ResizeBorderThickness="5"
+            />
+    </WindowChrome.WindowChrome>
+
+    <Window.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+    </Window.Resources>
+
+    <Grid 
+        Background="Black">
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="5"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="5"/>
+        </Grid.ColumnDefinitions>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="5"/>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="5"/>
+        </Grid.RowDefinitions>
+
+        <!--topbar-->
+        <Grid Grid.Row="1" Grid.Column="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition MinWidth="15" MaxWidth="30"/>
+                <ColumnDefinition MinWidth="15" MaxWidth="30"/>
+                <ColumnDefinition MinWidth="15" MaxWidth="30"/>
+            </Grid.ColumnDefinitions>
+
+            <TextBlock 
+                Grid.Column="0" 
+                Text="PswManager"
+                FontSize="16"
+                Padding="0, 0, 0, 0"
+                Foreground="White"
+                Opacity="0.90"/>
+
+            <!--To get commands-->
+            <Button 
+                x:Name="MinimizeButton"
+                WindowChrome.IsHitTestVisibleInChrome="True"
+                Content="—"
+                Grid.Column="1" 
+                Command="{Binding MinimizeCommand}"
+                />
+
+            <Button 
+                x:Name="ResizeButton"
+                WindowChrome.IsHitTestVisibleInChrome="True"
+                Content="▢"
+                Grid.Column="2"
+                Command="{Binding ResizeCommand}"
+                />
+
+            <Button 
+                Style="{StaticResource CloseButton}"
+                x:Name="CloseButton"
+                WindowChrome.IsHitTestVisibleInChrome="True"
+                Content="✖"
+                Grid.Column="3"
+                Command="{Binding CloseCommand}"
+                />
+
+        </Grid>
+
+        <DockPanel
+            Grid.Row="2"
+            Grid.Column="1"
+            Background="#FF121212"
+            >
+
+            <DockPanel.Resources>
+                
+            </DockPanel.Resources>
+
+            <ContentControl 
+                Margin="15"
+                Content="{Binding CurrentViewModel}"/>
+
+        </DockPanel>
+
+        <Rectangle
+            Grid.Row="2"
+            Grid.Column="1"
+            Fill="Black"
+            Opacity="0.4"
+            Visibility="{Binding MessageBoxVisibility, Converter={StaticResource BooleanToVisibilityConverter}}"
+            />
+
+        <Grid
+            Grid.Row="2"
+            Grid.Column="1"
+            Background="#FF272121"
+            VerticalAlignment="Center"
+            HorizontalAlignment="Center"
+            Visibility="{Binding MessageBoxVisibility, Converter={StaticResource BooleanToVisibilityConverter}}"
+            >
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="10"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="10"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="10"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="10"/>
+            </Grid.RowDefinitions>
+
+            <TextBlock
+                Grid.Row="1"
+                Grid.Column="1"
+                Text="{Binding Message}"
+                Foreground="White"
+                Opacity="0.80"
+                Margin="5"
+                TextWrapping="Wrap"
+                />
+
+            <Button
+                Grid.Row="2"
+                Grid.Column="1"
+                HorizontalAlignment="Right"
+                Content="Ok"
+                Width="70"
+                Height="20"
+                Margin="5"
+                Command="{Binding CloseMessageCommand}"
+                />
+
+        </Grid>
 
     </Grid>
 </Window>
