--- a/PswManager.UI.WPF/Views/AccountsListingView.xaml
+++ b/PswManager.UI.WPF/Views/AccountsListingView.xaml
@@ -4,7 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PswManager.UI.WPF.Views"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
+             xmlns:viewmodels="clr-namespace:PswManager.UI.WPF.ViewModels" 
+             d:DataContext="{d:DesignInstance Type=viewmodels:AccountsListingViewModel}"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
             
