--- a/PswManager.UI.WPF/Views/SettingsView.xaml
+++ b/PswManager.UI.WPF/Views/SettingsView.xaml
@@ -5,6 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PswManager.UI.WPF.Views"
              mc:Ignorable="d" 
+             xmlns:viewmodels="clr-namespace:PswManager.UI.WPF.ViewModels" 
+             d:DataContext="{d:DesignInstance Type=viewmodels:SettingsViewModel}"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
             
