Implemented PasswordBox's default style.

--- a/PswManager.UI.WPF/App.xaml
+++ b/PswManager.UI.WPF/App.xaml
@@ -13,6 +13,7 @@
                 <ResourceDictionary x:Name="DefaultTextBlock" Source="pack://application:,,,/Styles/TextBlockStyle.xaml"/>
                 <ResourceDictionary x:Name="DefaultComboBox" Source="pack://application:,,,/Styles/ComboBoxStyle.xaml"/>
                 <ResourceDictionary x:Name="DefaultLabel" Source="pack://application:,,,/Styles/LabelStyle.xaml"/>
+                <ResourceDictionary x:Name="DefaultPasswordBox" Source="pack://application:,,,/Styles/PasswordBoxStyle.xaml"/>
 
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
