Implemented button-enabling through the use of errors fields.

--- a/PswManager.UI.WPF/Views/FirstTimeLoginView.xaml
+++ b/PswManager.UI.WPF/Views/FirstTimeLoginView.xaml
@@ -62,6 +62,7 @@
         <Button
             Content="Send"
             Command="{Binding SendCommand}"
+            IsEnabled="{Binding CanSignUp}"
             FontSize="23"
             Padding="120, 18"
             Grid.Row="4"
