Implemented error UI for BindablePasswordBox

--- a/PswManager.UI.WPF/Components/BindablePasswordBox.xaml
+++ b/PswManager.UI.WPF/Components/BindablePasswordBox.xaml
@@ -6,12 +6,40 @@
              xmlns:local="clr-namespace:PswManager.UI.WPF.Components"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+
+    <UserControl.Style>
+        <Style>
+            <Setter Property="Validation.ErrorTemplate">
+                <Setter.Value>
+                    <ControlTemplate>
+                        <AdornedElementPlaceholder/>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </UserControl.Style>
+
+    
+    <StackPanel>
 
         <PasswordBox 
             x:Name="_passwordBox"
-            PasswordChanged="PasswordBox_PasswordChanged"         
+            PasswordChanged="PasswordBox_PasswordChanged"    
             />
+        
+        <ItemsControl x:Name="_errorsItemControl">
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <Label 
+                        FontSize="12"
+                        Foreground="Red" 
+                        Background="Transparent" 
+                        Content="{Binding}"
+                        />
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
 
-    </Grid>
+    </StackPanel>
+
 </UserControl>
