Renamed Password to Master Key

--- a/PswManager.UI.WPF/Views/SignUpView.xaml
+++ b/PswManager.UI.WPF/Views/SignUpView.xaml
@@ -33,7 +33,7 @@
             >
 
             <Label
-                Content="Password:"
+                Content="Master Key:"
                 />
 
             <components:BindablePasswordBox
@@ -49,7 +49,7 @@
             >
 
             <Label
-                Content="Repeat Password:"
+                Content="Repeat Master Key:"
                 />
 
             <components:BindablePasswordBox
