Changed "Send" to "Sign Up"

--- a/PswManager.UI.WPF/Views/SignUpView.xaml
+++ b/PswManager.UI.WPF/Views/SignUpView.xaml
@@ -60,7 +60,7 @@
 
 
         <Button
-            Content="Send"
+            Content="Sign Up"
             Command="{Binding SendCommand}"
             IsEnabled="{Binding CanSignUp}"
             FontSize="23"
