--- a/PswManager.UI.WPF/App.xaml
+++ b/PswManager.UI.WPF/App.xaml
@@ -6,6 +6,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
 
+                <!--Pure Styles-->
                 <ResourceDictionary x:Name="DefaultButton" Source="pack://application:,,,/Styles/ButtonStyle.xaml"/>
                 <ResourceDictionary x:Name="DefaultDataGrid" Source="pack://application:,,,/Styles/DataGridStyle.xaml"/>
                 <ResourceDictionary x:Name="DefaultScrollbar" Source="pack://application:,,,/Styles/ScrollbarStyle.xaml"/>
@@ -14,6 +15,10 @@
                 <ResourceDictionary x:Name="DefaultComboBox" Source="pack://application:,,,/Styles/ComboBoxStyle.xaml"/>
                 <ResourceDictionary x:Name="DefaultLabel" Source="pack://application:,,,/Styles/LabelStyle.xaml"/>
                 <ResourceDictionary x:Name="DefaultPasswordBox" Source="pack://application:,,,/Styles/PasswordBoxStyle.xaml"/>
+
+                <!--Custom Control Styles-->
+                <ResourceDictionary x:Name="DefaultTextBoxWithPreview" Source="pack://application:,,,/Components/TextBoxWithPreviewStyle.xaml"/>
+                <ResourceDictionary x:Name="DefaultTextBoxWithButton" Source="pack://application:,,,/Components/TextBoxWithButtonStyle.xaml"/>
 
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
