--- a/PswManager.UI.WPF/Views/AccountsListingView.xaml
+++ b/PswManager.UI.WPF/Views/AccountsListingView.xaml
@@ -6,9 +6,68 @@
              xmlns:local="clr-namespace:PswManager.UI.WPF.Views"
              mc:Ignorable="d"
              xmlns:viewmodels="clr-namespace:PswManager.UI.WPF.ViewModels" 
+             xmlns:components="clr-namespace:PswManager.UI.WPF.Components"
              d:DataContext="{d:DesignInstance Type=viewmodels:AccountsListingViewModel}"
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             Loaded="UserControl_Loaded">
+    
     <Grid>
-            
+        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0.5*" MaxWidth="20"/>
+            <ColumnDefinition Width="2*" MinWidth="160"/>
+            <ColumnDefinition Width="2*" MinWidth="180"/>
+            <ColumnDefinition Width="5*"/>
+            <ColumnDefinition Width="3*" MinWidth="100"/>
+            <ColumnDefinition Width="3*" MinWidth="100"/>
+            <ColumnDefinition Width="0.5*" MaxWidth="20"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="0.5*" MaxHeight="20"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="9*"/>
+            <RowDefinition Height="0.5*" MaxHeight="20"/>
+        </Grid.RowDefinitions>
+
+        <Button
+            Grid.Column="1"
+            Grid.Row="1"
+            Content="Settings"
+            Command="{Binding SettingsCommand}"
+            />
+
+        <components:TextBoxWithButton
+            Grid.Column="2"
+            Grid.Row="1"
+            Padding="2"
+            FontSize="14"
+            PreviewText="Search Account..."
+            ButtonText="🔍"
+            Text="{Binding Search, UpdateSourceTrigger=PropertyChanged}"
+            />
+
+        <Button
+            Grid.Column="4"
+            Grid.ColumnSpan="2"
+            Grid.Row="1"
+            Content="Create New Account"
+            Command="{Binding CreateAccountCommand}"
+            />
+
+        <DataGrid
+            IsReadOnly="True"
+            Grid.Column="1"
+            Grid.ColumnSpan="5"
+            Grid.Row="2"
+            ItemsSource="{Binding Accounts}"
+            >
+
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Name" Width="100" Binding="{Binding Name}"/>
+                <DataGridTextColumn Header="Encrypted Password" MinWidth="30" Width="1*" Binding="{Binding EncryptedPassword}"/>
+                <DataGridTextColumn Header="Encrypted Email" MinWidth="30" Width="1*" Binding="{Binding EncryptedEmail}"/>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
+    
 </UserControl>
