--- a/PswManager.UI.WPF/Views/EditAccountView.xaml
+++ b/PswManager.UI.WPF/Views/EditAccountView.xaml
@@ -6,9 +6,114 @@
              xmlns:local="clr-namespace:PswManager.UI.WPF.Views"
              mc:Ignorable="d" 
              xmlns:viewmodels="clr-namespace:PswManager.UI.WPF.ViewModels" 
+             xmlns:components="clr-namespace:PswManager.UI.WPF.Components"
              d:DataContext="{d:DesignInstance Type=viewmodels:EditAccountViewModel}"
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
+
+    <UserControl.Resources>
+        <Style TargetType="Label" BasedOn="{StaticResource {x:Type Label}}">
+            <Style.Setters>
+                <Setter Property="VerticalAlignment" Value="Top"/>
+            </Style.Setters>
+        </Style>
+
+        <Style TargetType="TextBox" BasedOn="{StaticResource {x:Type TextBox}}">
+            <Style.Setters>
+                <Setter Property="Margin" Value="0, 3"/>
+            </Style.Setters>
+        </Style>
+    </UserControl.Resources>
+
+    <Grid
+        Margin="5"
+        Background="#FF272121"
+        >
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="10"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="15"/>
+        </Grid.ColumnDefinitions>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="10"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition MinHeight="50" MaxHeight="80" Height="*"/>
+            <RowDefinition Height="15"/>
+        </Grid.RowDefinitions>
+
+        <Label
+            Grid.Row="1"
+            Grid.Column="1"
+            Content="Name: "
+            />
+
+        <components:TextBoxWithPreview
+            Grid.Row="1"
+            Grid.Column="2"
+            Text="{Binding AccountName, UpdateSourceTrigger=PropertyChanged}"
+            PreviewText="{Binding CurrentName}"
+            />
+
+        <Label
+            Grid.Row="2"
+            Grid.Column="1"
+            Content="Password: "
+            />
+
+        <components:TextBoxWithPreview
+            Grid.Row="2"
+            Grid.Column="2"
+            Text="{Binding Password}"
+            PreviewText="{Binding CurrentPassword}"
+            />
+
+        <Label
+            Grid.Row="3"
+            Grid.Column="1"
+            Content="Email: "
+            />
+
+        <components:TextBoxWithPreview
+            Grid.Row="3"
+            Grid.Column="2"
+            Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}"
+            PreviewText="{Binding CurrentEmail}"
+            />
+
+        <Grid
+            Grid.Row="6"
+            Grid.Column="1"
+            Grid.ColumnSpan="2"
+            >
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="8*"/>
+            </Grid.ColumnDefinitions>
+
+            <Button 
+                Content="Cancel"
+                Grid.Column="0"
+                Margin="10, 10"
+                Command="{Binding CancelCommand}"
+                />
+
+            <Button
+                Content="Edit"
+                Grid.Column="1"
+                Margin="10, 10"
+                IsEnabled="{Binding CanEdit}"
+                Command="{Binding SubmitCommand}"
+                />
+
+        </Grid>
+
     </Grid>
+    
 </UserControl>
