--- a/PswManager.UI.WPF/Views/AccountsListingView.xaml
+++ b/PswManager.UI.WPF/Views/AccountsListingView.xaml
@@ -10,6 +10,10 @@
              d:DataContext="{d:DesignInstance Type=viewmodels:AccountsListingViewModel}"
              d:DesignHeight="450" d:DesignWidth="800"
              Loaded="UserControl_Loaded">
+
+    <UserControl.Resources>
+        <BooleanToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
+    </UserControl.Resources>
     
     <Grid>
         
@@ -55,6 +59,7 @@
             />
 
         <DataGrid
+            x:Name="AccountsDataGrid"
             IsReadOnly="True"
             Grid.Column="1"
             Grid.ColumnSpan="5"
@@ -66,8 +71,36 @@
                 <DataGridTextColumn Header="Name" Width="100" Binding="{Binding Name}"/>
                 <DataGridTextColumn Header="Encrypted Password" MinWidth="30" Width="1*" Binding="{Binding EncryptedPassword}"/>
                 <DataGridTextColumn Header="Encrypted Email" MinWidth="30" Width="1*" Binding="{Binding EncryptedEmail}"/>
+                <DataGridTemplateColumn Header="More Details" MaxWidth="100">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button
+                                Content="Details"
+                                Command="{Binding DetailsCommand}"
+                                />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
+
+        <Border
+            Background="Transparent"
+            Grid.Column="0"
+            Grid.ColumnSpan="7"
+            Grid.Row="0"
+            Grid.RowSpan="4"
+            Visibility="{Binding ShowDetails, Converter={StaticResource BoolToVisibilityConverter}}"
+            >
+            <local:AccountView
+                Margin="35"
+                DataContext="{Binding CloseUpViewModel}"
+                />
+
+        </Border>
+
+
+
     </Grid>
     
 </UserControl>
