Set up settings view/viewmodel as a placeholder for possible future additions.
The button in the AccountsListingView has been collapsed to hide the view.

--- a/PswManager.UI.WPF/Views/AccountsListingView.xaml
+++ b/PswManager.UI.WPF/Views/AccountsListingView.xaml
@@ -38,10 +38,12 @@
             Grid.Row="1"
             Content="Settings"
             Command="{Binding SettingsCommand}"
+            Visibility="Collapsed"
             />
 
         <components:TextBoxWithButton
-            Grid.Column="2"
+            Grid.Column="1"
+            Grid.ColumnSpan="2"
             Grid.Row="1"
             Padding="2"
             FontSize="14"
