--- a/PswManager.UI.WPF/Views/SettingsView.xaml
+++ b/PswManager.UI.WPF/Views/SettingsView.xaml
@@ -9,6 +9,20 @@
              d:DataContext="{d:DesignInstance Type=viewmodels:SettingsViewModel}"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-            
+        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <Button
+            Content="Back"
+            Command="{Binding HomeButton}"
+            />
+
+        <Label
+            Grid.Row="1"
+            Content="This page is currently only a placeholder in case an update adds some settings."
+            />
     </Grid>
 </UserControl>
