Changed main window's title to the application's name.

--- a/PswManager.UI.WPF/MainWindow.xaml
+++ b/PswManager.UI.WPF/MainWindow.xaml
@@ -9,7 +9,7 @@
         xmlns:viewmodels="clr-namespace:PswManager.UI.WPF.ViewModels" 
         d:DataContext="{d:DesignInstance Type=viewmodels:MainViewModel}"
         mc:Ignorable="d"
-        Title="MainWindow" 
+        Title="PswManager" 
         MaxHeight="{x:Static SystemParameters.MaximizedPrimaryScreenHeight}"
         MaxWidth="{x:Static SystemParameters.MaximizedPrimaryScreenWidth}"
         Height="450" 
